finished tic tac toe game

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body onload="init()">
 
     <h1>Tic Tac Toe</h1>
-    <div id="content">
-
+   <div id="game-container">
+        <div id="content"></div>
+        <button id="reset-btn" onclick="resetGame()">Neues Spiel</button>
     </div>
-
     <script src="./script.js"></script>
 </body>
 </html>
